update entry body
