# server/admin/openapi/oas_schemas_gen.go
@@ -1,455 +1,0 @@
-// Code generated by ogen, DO NOT EDIT.
-
-package openapi
-
-import (
-	"fmt"
-	"time"
-)
-
-func (s *ErrorResponseStatusCode) Error() string {
-	return fmt.Sprintf("code %d: %+v", s.StatusCode, s.Response)
-}
-
-// Ref: #/components/schemas/ErrorResponse
-type ErrorResponse struct {
-	Message OptString `json:"message"`
-	Error   OptString `json:"error"`
-}
-
-// GetMessage returns the value of Message.
-func (s *ErrorResponse) GetMessage() OptString {
-	return s.Message
-}
-
-// GetError returns the value of Error.
-func (s *ErrorResponse) GetError() OptString {
-	return s.Error
-}
-
-// SetMessage sets the value of Message.
-func (s *ErrorResponse) SetMessage(val OptString) {
-	s.Message = val
-}
-
-// SetError sets the value of Error.
-func (s *ErrorResponse) SetError(val OptString) {
-	s.Error = val
-}
-
-// ErrorResponseStatusCode wraps ErrorResponse with StatusCode.
-type ErrorResponseStatusCode struct {
-	StatusCode int
-	Response   ErrorResponse
-}
-
-// GetStatusCode returns the value of StatusCode.
-func (s *ErrorResponseStatusCode) GetStatusCode() int {
-	return s.StatusCode
-}
-
-// GetResponse returns the value of Response.
-func (s *ErrorResponseStatusCode) GetResponse() ErrorResponse {
-	return s.Response
-}
-
-// SetStatusCode sets the value of StatusCode.
-func (s *ErrorResponseStatusCode) SetStatusCode(val int) {
-	s.StatusCode = val
-}
-
-// SetResponse sets the value of Response.
-func (s *ErrorResponseStatusCode) SetResponse(val ErrorResponse) {
-	s.Response = val
-}
-
-// Ref: #/components/schemas/GetLatestEntriesRow
-type GetLatestEntriesRow struct {
-	Path         OptString      `json:"Path"`
-	Title        OptString      `json:"Title"`
-	Body         OptString      `json:"Body"`
-	Visibility   OptString      `json:"Visibility"`
-	Format       OptString      `json:"Format"`
-	PublishedAt  OptNilDateTime `json:"PublishedAt"`
-	LastEditedAt OptNilDateTime `json:"LastEditedAt"`
-	CreatedAt    OptNilDateTime `json:"CreatedAt"`
-	UpdatedAt    OptNilDateTime `json:"UpdatedAt"`
-	ImageUrl     OptNilString   `json:"ImageUrl"`
-}
-
-// GetPath returns the value of Path.
-func (s *GetLatestEntriesRow) GetPath() OptString {
-	return s.Path
-}
-
-// GetTitle returns the value of Title.
-func (s *GetLatestEntriesRow) GetTitle() OptString {
-	return s.Title
-}
-
-// GetBody returns the value of Body.
-func (s *GetLatestEntriesRow) GetBody() OptString {
-	return s.Body
-}
-
-// GetVisibility returns the value of Visibility.
-func (s *GetLatestEntriesRow) GetVisibility() OptString {
-	return s.Visibility
-}
-
-// GetFormat returns the value of Format.
-func (s *GetLatestEntriesRow) GetFormat() OptString {
-	return s.Format
-}
-
-// GetPublishedAt returns the value of PublishedAt.
-func (s *GetLatestEntriesRow) GetPublishedAt() OptNilDateTime {
-	return s.PublishedAt
-}
-
-// GetLastEditedAt returns the value of LastEditedAt.
-func (s *GetLatestEntriesRow) GetLastEditedAt() OptNilDateTime {
-	return s.LastEditedAt
-}
-
-// GetCreatedAt returns the value of CreatedAt.
-func (s *GetLatestEntriesRow) GetCreatedAt() OptNilDateTime {
-	return s.CreatedAt
-}
-
-// GetUpdatedAt returns the value of UpdatedAt.
-func (s *GetLatestEntriesRow) GetUpdatedAt() OptNilDateTime {
-	return s.UpdatedAt
-}
-
-// GetImageUrl returns the value of ImageUrl.
-func (s *GetLatestEntriesRow) GetImageUrl() OptNilString {
-	return s.ImageUrl
-}
-
-// SetPath sets the value of Path.
-func (s *GetLatestEntriesRow) SetPath(val OptString) {
-	s.Path = val
-}
-
-// SetTitle sets the value of Title.
-func (s *GetLatestEntriesRow) SetTitle(val OptString) {
-	s.Title = val
-}
-
-// SetBody sets the value of Body.
-func (s *GetLatestEntriesRow) SetBody(val OptString) {
-	s.Body = val
-}
-
-// SetVisibility sets the value of Visibility.
-func (s *GetLatestEntriesRow) SetVisibility(val OptString) {
-	s.Visibility = val
-}
-
-// SetFormat sets the value of Format.
-func (s *GetLatestEntriesRow) SetFormat(val OptString) {
-	s.Format = val
-}
-
-// SetPublishedAt sets the value of PublishedAt.
-func (s *GetLatestEntriesRow) SetPublishedAt(val OptNilDateTime) {
-	s.PublishedAt = val
-}
-
-// SetLastEditedAt sets the value of LastEditedAt.
-func (s *GetLatestEntriesRow) SetLastEditedAt(val OptNilDateTime) {
-	s.LastEditedAt = val
-}
-
-// SetCreatedAt sets the value of CreatedAt.
-func (s *GetLatestEntriesRow) SetCreatedAt(val OptNilDateTime) {
-	s.CreatedAt = val
-}
-
-// SetUpdatedAt sets the value of UpdatedAt.
-func (s *GetLatestEntriesRow) SetUpdatedAt(val OptNilDateTime) {
-	s.UpdatedAt = val
-}
-
-// SetImageUrl sets the value of ImageUrl.
-func (s *GetLatestEntriesRow) SetImageUrl(val OptNilString) {
-	s.ImageUrl = val
-}
-
-// Object where keys are lowercase destination entry titles and values are their paths (null if entry
-// doesn't exist).
-// Ref: #/components/schemas/LinkedEntriesResponse
-type LinkedEntriesResponse map[string]NilString
-
-func (s *LinkedEntriesResponse) init() LinkedEntriesResponse {
-	m := *s
-	if m == nil {
-		m = map[string]NilString{}
-		*s = m
-	}
-	return m
-}
-
-// NewNilString returns new NilString with value set to v.
-func NewNilString(v string) NilString {
-	return NilString{
-		Value: v,
-	}
-}
-
-// NilString is nullable string.
-type NilString struct {
-	Value string
-	Null  bool
-}
-
-// SetTo sets value to v.
-func (o *NilString) SetTo(v string) {
-	o.Null = false
-	o.Value = v
-}
-
-// IsSet returns true if value is Null.
-func (o NilString) IsNull() bool { return o.Null }
-
-// SetNull sets value to null.
-func (o *NilString) SetToNull() {
-	o.Null = true
-	var v string
-	o.Value = v
-}
-
-// Get returns value and boolean that denotes whether value was set.
-func (o NilString) Get() (v string, ok bool) {
-	if o.Null {
-		return v, false
-	}
-	return o.Value, true
-}
-
-// Or returns value if set, or given parameter if does not.
-func (o NilString) Or(d string) string {
-	if v, ok := o.Get(); ok {
-		return v
-	}
-	return d
-}
-
-// NewOptDateTime returns new OptDateTime with value set to v.
-func NewOptDateTime(v time.Time) OptDateTime {
-	return OptDateTime{
-		Value: v,
-		Set:   true,
-	}
-}
-
-// OptDateTime is optional time.Time.
-type OptDateTime struct {
-	Value time.Time
-	Set   bool
-}
-
-// IsSet returns true if OptDateTime was set.
-func (o OptDateTime) IsSet() bool { return o.Set }
-
-// Reset unsets value.
-func (o *OptDateTime) Reset() {
-	var v time.Time
-	o.Value = v
-	o.Set = false
-}
-
-// SetTo sets value to v.
-func (o *OptDateTime) SetTo(v time.Time) {
-	o.Set = true
-	o.Value = v
-}
-
-// Get returns value and boolean that denotes whether value was set.
-func (o OptDateTime) Get() (v time.Time, ok bool) {
-	if !o.Set {
-		return v, false
-	}
-	return o.Value, true
-}
-
-// Or returns value if set, or given parameter if does not.
-func (o OptDateTime) Or(d time.Time) time.Time {
-	if v, ok := o.Get(); ok {
-		return v
-	}
-	return d
-}
-
-// NewOptNilDateTime returns new OptNilDateTime with value set to v.
-func NewOptNilDateTime(v time.Time) OptNilDateTime {
-	return OptNilDateTime{
-		Value: v,
-		Set:   true,
-	}
-}
-
-// OptNilDateTime is optional nullable time.Time.
-type OptNilDateTime struct {
-	Value time.Time
-	Set   bool
-	Null  bool
-}
-
-// IsSet returns true if OptNilDateTime was set.
-func (o OptNilDateTime) IsSet() bool { return o.Set }
-
-// Reset unsets value.
-func (o *OptNilDateTime) Reset() {
-	var v time.Time
-	o.Value = v
-	o.Set = false
-	o.Null = false
-}
-
-// SetTo sets value to v.
-func (o *OptNilDateTime) SetTo(v time.Time) {
-	o.Set = true
-	o.Null = false
-	o.Value = v
-}
-
-// IsSet returns true if value is Null.
-func (o OptNilDateTime) IsNull() bool { return o.Null }
-
-// SetNull sets value to null.
-func (o *OptNilDateTime) SetToNull() {
-	o.Set = true
-	o.Null = true
-	var v time.Time
-	o.Value = v
-}
-
-// Get returns value and boolean that denotes whether value was set.
-func (o OptNilDateTime) Get() (v time.Time, ok bool) {
-	if o.Null {
-		return v, false
-	}
-	if !o.Set {
-		return v, false
-	}
-	return o.Value, true
-}
-
-// Or returns value if set, or given parameter if does not.
-func (o OptNilDateTime) Or(d time.Time) time.Time {
-	if v, ok := o.Get(); ok {
-		return v
-	}
-	return d
-}
-
-// NewOptNilString returns new OptNilString with value set to v.
-func NewOptNilString(v string) OptNilString {
-	return OptNilString{
-		Value: v,
-		Set:   true,
-	}
-}
-
-// OptNilString is optional nullable string.
-type OptNilString struct {
-	Value string
-	Set   bool
-	Null  bool
-}
-
-// IsSet returns true if OptNilString was set.
-func (o OptNilString) IsSet() bool { return o.Set }
-
-// Reset unsets value.
-func (o *OptNilString) Reset() {
-	var v string
-	o.Value = v
-	o.Set = false
-	o.Null = false
-}
-
-// SetTo sets value to v.
-func (o *OptNilString) SetTo(v string) {
-	o.Set = true
-	o.Null = false
-	o.Value = v
-}
-
-// IsSet returns true if value is Null.
-func (o OptNilString) IsNull() bool { return o.Null }
-
-// SetNull sets value to null.
-func (o *OptNilString) SetToNull() {
-	o.Set = true
-	o.Null = true
-	var v string
-	o.Value = v
-}
-
-// Get returns value and boolean that denotes whether value was set.
-func (o OptNilString) Get() (v string, ok bool) {
-	if o.Null {
-		return v, false
-	}
-	if !o.Set {
-		return v, false
-	}
-	return o.Value, true
-}
-
-// Or returns value if set, or given parameter if does not.
-func (o OptNilString) Or(d string) string {
-	if v, ok := o.Get(); ok {
-		return v
-	}
-	return d
-}
-
-// NewOptString returns new OptString with value set to v.
-func NewOptString(v string) OptString {
-	return OptString{
-		Value: v,
-		Set:   true,
-	}
-}
-
-// OptString is optional string.
-type OptString struct {
-	Value string
-	Set   bool
-}
-
-// IsSet returns true if OptString was set.
-func (o OptString) IsSet() bool { return o.Set }
-
-// Reset unsets value.
-func (o *OptString) Reset() {
-	var v string
-	o.Value = v
-	o.Set = false
-}
-
-// SetTo sets value to v.
-func (o *OptString) SetTo(v string) {
-	o.Set = true
-	o.Value = v
-}
-
-// Get returns value and boolean that denotes whether value was set.
-func (o OptString) Get() (v string, ok bool) {
-	if !o.Set {
-		return v, false
-	}
-	return o.Value, true
-}
-
-// Or returns value if set, or given parameter if does not.
-func (o OptString) Or(d string) string {
-	if v, ok := o.Get(); ok {
-		return v
-	}
-	return d
-}
